<resources>
    <string name="app_name">InboxtechsTaskApp</string>
    <string name="profile_image">Profile Image</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="select_rol">Select Role</string>
    <string name="register_head">REGISTER</string>
    <string name="signup">Create an Account</string>
    <string name="login">Login</string>
    <string name="logoin">LOG IN</string>
    <string name="or">OR</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>