<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white_color"
    android:gravity="center"
    android:isScrollContainer="true"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="center"
                    android:text="@string/logoin"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                  />

                <View
                    android:layout_width="40dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUserMobile"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@null"
                        android:hint="@string/mobile"
                        android:inputType="number"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textColor="@color/black_color"
                        android:textColorHint="@color/sky_blue_color"
                        android:textSize="12sp"
                        tools:ignore="HardcodedText" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/sky_blue_color" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@null"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/black_color"
                        android:textColorHint="@color/sky_blue_color"
                        android:textSize="12sp"
                        tools:ignore="HardcodedText" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/sky_blue_color" />


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/register_btn_bg"
                    android:elevation="3dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white_color"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center">

                    <View
                        android:id="@+id/View1"
                        android:layout_width="60dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/sky_blue_color" />

                    <TextView
                        android:id="@+id/tvContinue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/View1"
                        android:text="@string/or"
                        android:textColor="@color/sky_blue_color"
                        android:textSize="12sp"/>
                    <View
                        android:layout_width="60dp"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/tvContinue"
                        android:background="@color/sky_blue_color" />
                </RelativeLayout>


                <TextView
                    android:id="@+id/tvCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="center"
                    android:text="@string/signup"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"
     />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</LinearLayout>